<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/buttonBar"
        android:layout_width="fill_parent"
        android:layout_height="50sp"
        android:layout_alignParentTop="true"
        android:background="@color/result_image_border"
        android:orientation="horizontal" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/viewcart"
            android:text="View Cart"
            android:visibility="gone"
            />

        <ImageButton
            android:id="@+id/exitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginLeft="20dp"
            android:visibility="gone"
            android:layout_marginTop="9dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp" />

        <TextView
            android:id="@+id/booth_firstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:text="Center and Hold the Bar code or QR code to Scan"
            android:textColor="#000000"
            android:textSize="13dp"
            android:typeface="serif" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonBar"
        android:background="@color/transparent"
        android:orientation="vertical"
        android:paddingTop="0sp" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >    
                    <SurfaceView
                android:id="@+id/preview_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" ></SurfaceView>
                <!--  <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/frame1"
         ></FrameLayout> 
   -->
    
            
        
  <com.smart.ticketing.scanner.ViewfinderView
      android:id="@+id/viewfinder_view"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      />
   

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/result_view"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/result_view"
            android:orientation="vertical"
            android:padding="4dip"
            android:visibility="gone" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="top"
                android:orientation="horizontal"
                android:padding="12dip" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="right"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/barcode_image_view"
                        android:layout_width="160dip"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dip"
                        android:adjustViewBounds="true"
                        android:maxHeight="160dip"
                        android:maxWidth="160dip"
                        android:scaleType="centerInside" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/format_text_view_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingRight="4dip"
                            android:text="@string/msg_default_format"
                            android:textColor="@color/result_minor_text"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/format_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/result_minor_text"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/type_text_view_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingRight="4dip"
                            android:text="@string/msg_default_type"
                            android:textColor="@color/result_minor_text"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/type_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/result_minor_text"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/time_text_view_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingRight="4dip"
                            android:text="@string/msg_default_time"
                            android:textColor="@color/result_minor_text"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/time_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/result_minor_text"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/meta_text_view_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingRight="4dip"
                            android:text="@string/msg_default_meta"
                            android:textColor="@color/result_minor_text"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/meta_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/result_minor_text"
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>

                <ScrollView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/contents_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autoLink="web"
                        android:paddingLeft="12dip"
                        android:textColor="@color/result_text"
                        android:textColorLink="@color/result_text"
                        android:textSize="22sp" />
                </ScrollView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/result_button_view"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" >

                <Button
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:visibility="gone" />

                <Button
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:visibility="gone" />

                <Button
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:visibility="gone" />

                <Button
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/status_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/transparent"
            android:text="@string/msg_default_status"
            android:textColor="@color/status_text"
            android:textSize="14sp" />
    </LinearLayout>
    <!-- 

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_marginBottom="60sp"
    android:background="@drawable/button_bar"
    android:gravity="center" >

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/cancel"
        android:layout_centerHorizontal="true"
        android:text="Cancel" >
</Button></LinearLayout>

 -->
   

</RelativeLayout>
	